# mavros-visp-ompl-exploration

./: README.md
exploration_world/: CMakeLists.txt  package.xml
exploration_world/launch/: exp.launch
exploration_world/models/ch1/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
exploration_world/models/ch1/meshes/: ch1.dae  ch1_map.stl  ch1_map1100.stl  ch1_map11000.stl  ch1_map11000.stl.old  ch1_map1200.stl  h.dae  p0_green.dae  p1_purple.dae  p2_heavenly.dae  p3_red.dae  p4_blue.dae  p5_green_water.dae  palo11000.stl
exploration_world/models/h/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
exploration_world/models/h/meshes/: h.dae
exploration_world/models/id1/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
exploration_world/models/id1/meshes/: id1.dae
exploration_world/models/id2/: model.config  model.sdf
exploration_world/models/id3/: model.sdf
exploration_world/models/id4/: model.sdf
exploration_world/models/id5/: model.sdf
exploration_world/models/id6/: model.sdf
exploration_world/models/id7/: model.sdf
exploration_world/models/id7/meshes/: id7.dae
exploration_world/models/qr_base/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
exploration_world/models/qr_base/meshes/: qr_base.dae
exploration_world/worlds/: ch1.world
file_sdf_generation/: model_generation.txt  tarot.xacro
master_pkg/: CMakeLists.txt  package.xml
master_pkg/launch/: all.launch  master.launch  tarot.launch  tf_trasform.launch
master_pkg/src/: master.cpp  tf_map2base.cpp
px4_planner/: CMakeLists.txt  package.xml
px4_planner/action/: Fly.action
px4_planner/include/px4_planner/: fly_action_server.h
px4_planner/launch/: fly_action_client.launch  fly_action_server.launch  octomap_mapping.launch
px4_planner/resource/: config.rviz
px4_planner/src/: fly_action_client.cpp  fly_action_server.cpp  fly_action_server_main.cpp
px4_planner/srv/: planner_commander_service.srv
qr_detector_pkg/: CMakeLists.txt  package.xml
qr_detector_pkg/launch/: qr_tracker.launch
qr_detector_pkg/msg/: qr_detection_msg.msg
qr_detector_pkg/resource/visp_qr_models/: calibration.ini  pattern.cao  pattern.cfg  pattern.wrl
qr_detector_pkg/src/: qr_detector.cpp
qr_detector_pkg/srv/: activate_service.srv  qr_position_service.srv
