<?xml version="1.0"?>
<package format="2">
  <name>px4_planner</name>
  <version>0.0.0</version>
  <description>The px4_planner package</description>

  <maintainer email="alessandro@todo.todo">alessandro</maintainer>
  <license>TODO</license>


	<exec_depend>message_generation</exec_depend>
	<exec_depend>actionlib_msgs</exec_depend>
	<build_depend>actionlib_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	<build_depend>eigen</build_depend>
	
	<build_depend>qr_detector_pkg</build_depend> 
  <exec_depend>qr_detector_pkg</exec_depend> 
	
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>geometry_mesgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>octomap_msgs</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>geometry_mesgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
	

  <export>

  </export>

</package>
